src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-using-fn-items.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-using-fn-items.rs:2:10
   |
LL | fn foo(x:fn(&u8, &u8), y: Vec<&u8>, z: &u8) {
   |                               ---      --- these two types are declared with different lifetimes...
LL |   y.push(z);
   |          ^ ...but data from `z` flows into `y` here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter
   |
LL | fn foo<'a>(x:fn(&u8, &u8), y: Vec<&'a u8>, z: &'a u8) {
   |       ++++                         ++          ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
